Minor fix to help container to keep animations from bleeding through

--- a/src/css/Help.css
+++ b/src/css/Help.css
@@ -23,7 +23,7 @@
   text-align: center;
   top: 10%;
   width: 60%;
-  z-index: 2;
+  z-index: 100;
 }
 
 .help-container button {
